Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<p>TERRENCE SMITH</p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Terrence Smith</title>
+	</head>
+	<body>
+        <header><h1 style="text-align: center">Champions League Round of 16 Matchups</h1></header>
+        <center></div><img src="https://seeklogo.com/images/U/UEFA_Champions_League-logo-DD9AE0500D-seeklogo.com.png"/></center>
+        <main>
+        <article>
+        <p style="text-align: center">With the Champions League group stages wrapping up, here are some of the exciting fixtures to look forward to as the knockout stage begins in 2018</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwuyyXU8AAGgBe.jpg"/></center>
+        <h2 style="text-align: center">Juventus v Tottenham</h2>
+        <p style="text-align: center">In one of the more interesting draws, the Italian champions face off against a Tottenham club riding high after bettering the likes of Real Madrid and Borussia Dortmund for the top spot in Group H</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwvER8VwAEp-uU.jpg"/></center>
+        <h2 style="text-align: center">Basel v Man City</h2>
+        <p style="text-align: center">While it gives the appearance of a one-sided matchup for competition favorites Man City, the club will be looking to erase the memories of surrendering a two goal lead and crashing out in the round of 16 of last year's competition. The Swiss champions are no strangers to upsets, having just defeated City's Manchester rivals and coming through a group many predicted them to finish bottom in.</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwvQIeV4AAh_q-.jpg"/></center>
+        <h2 style="text-align: center">Porto v Liverpool</h2>
+        <p style="text-align: center">Liverpool return to the knockout stages for the first time since 2006 as they face Porto.</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwvd7UUQAAhWq_.jpg"/></center>
+        <h2 style="text-align: center">Sevilla v Man United</h2>
+        <p style="text-align: center">In a matchup of the last two winners of the Europa League, both teams fancy themselves to make it through after only losing a single game in the group stages</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwvmnyVoAAmCTg.jpg"/></center>
+        <h2 style="text-align: center">Real Madrid v PSG</h2>
+        <p style="text-align: center">In the showcase matchup of the Round of 16, Real Madrid seek to secure their third title in a row against a the highest scoring team of the group stages, a PSG team that bought Neymar, the player that was responsible for Barcelona knocking them out in last year's round of 16, for &#8364;222 milion.</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwv1kLVAAAEaiQ.jpg"/></center>
+        <h2 style="text-align: center">Shakhtar Donetsk v Roma</h2>
+        <p style="text-align: center">Shakhtar Donetsk have become one of the best stories of this year's Champions League, making it to the knockout stages while forced to play hundreds of miles from home. Roma aren't doing too bad themselves, topping one of the competition's toughest groups while laying waste to Chelsea and Atletico Madrid along the way.</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwwDVJUIAA8h_v.jpg"/></center>
+        <h2 style="text-align: center">Chelsea v Barcelona</h2>
+        <p style="text-align: center">In another matchup of recent Champions League winners, Chelsea face a tough task in a Barcelona that is still a force in Europe despite losing Neymer. Chelsea are the only English team not to top their group after a historic five teams qualified for the group stages.</p>
+        <center></div><img src="https://pbs.twimg.com/media/DQwwQlnVwAAMcJ5.jpg"/></center>
+        <h2 style="text-align: center">Bayern Munich v Besiktas</h2>
+        <p style="text-align: center">Besiktas face a tough task after topping Group G against a Bayern Munich team that has returned to European dominated form after the return of manager Jupp Heynckes</p>
+        </article>
+        </main>
+        <footer>All images are products of UEFA</footer>
+    </body>
+</html>
