Added CSS styling

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Terrence Smith</title>
+        <title>Terrence Smith</title>
+        <link type="text/css" rel="stylesheet" href="styles.css"/>
 	</head>
 	<body>
         <header><h1 style="text-align: center">Champions League Round of 16 Matchups</h1></header>
